<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/curbmap_256x256" />

    <TextView
        android:id="@+id/usernameField"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_alignEnd="@+id/passwordField"
        android:layout_below="@+id/logo"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/back"
        android:text="username"
        android:textAlignment="center"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/passwordField"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_below="@+id/usernameField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/back"
        android:text="password"
        android:textAlignment="center"
        android:textSize="16dp" />


    <Button
        android:id="@+id/signInButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Sign In" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signInButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="Sign Up"
        android:textColor="@color/colorHyperLink" />

    <CheckBox
        android:id="@+id/rememberMeCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpLink"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Remember Me" />
</RelativeLayout>