<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/curbmap_256x256" />

    <TextView
        android:id="@+id/usernameField"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_alignEnd="@+id/confirmEmailField"
        android:layout_below="@+id/logo"
        android:layout_marginTop="11dp"
        android:layout_weight="1"
        android:background="@drawable/back"
        android:text="@string/username"
        android:textAlignment="center"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/passwordField"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_below="@+id/usernameField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:background="@drawable/back"
        android:text="@string/password"
        android:textAlignment="center"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/emailField"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_alignStart="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:layout_marginTop="10dp"
        android:background="@drawable/back"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/confirmEmailField"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_alignStart="@+id/emailField"
        android:layout_below="@+id/emailField"
        android:layout_marginTop="12dp"
        android:background="@drawable/back"
        android:text="@string/confirm_email"
        android:textAlignment="center"
        android:textSize="16dp" />


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmEmailField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/sign_up" />

</RelativeLayout>